Closed Bug 1126094 Opened 11 years ago Closed 11 years ago

GTK3 does not report correct screen size with HiDPI displays

Categories

(Core :: Widget: Gtk, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox38 --- fixed

People

(Reporter: acomminos, Assigned: acomminos)

References

Details

Attachments

(1 file)

Half of the available screen size is reported, caused by an incomplete upscale when nsScreenGtk is initialized from a GdkWindow (mRect and mAvailRect are in display pixels, but initialized with GDK coords). This causes issues with dialog positioning, such as the top-right menu appearing in the center of the screen. For example; I have a 2560x1600 HiDPI display with a scaling factor of 2. 1280x800 in GDK coords are available, but sites such as http://whatsmy.browsersize.com/ report only 640x400. This is caused by changes made in bug #975919.
Karl, this is a revised version of the nsScreenGtk changes factored out of bug 975919. This should set the proper screen size in pixels for both Xinerama and GdkWindow nsScreenGtk initialization. Thanks!
Attachment #8554930 - Flags: review?(karlt)
Attachment #8554930 - Flags: review?(karlt) → review+
Let's check this in, try looks okay.
Keywords: checkin-needed
Status: UNCONFIRMED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: