Bug 1126094 - Adds high resolution display support to GdkScreen. r=karlt